# E2E

./: README.md  pyproject.toml
e2e_tests/: tests_functions.py
